# digitalmodel

./: .command-registry.json  .coveragerc  .editorconfig  .env.template  .gitattributes  .gitignore  .legal-deny-list.yaml  .license-header.txt  .mutmut_config  .pre-commit-config.yaml  02_s04_hr_ext_force_py_inputs.csv  =0.0.7  AGENTS.md  AqwaServerLogFile.txt  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup.20250805-204115  CODEOWNERS  DELIVERY_REPORT.txt  FINAL_TEST_BASELINE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  OUTPUT_CONTROL_PROPOSAL.md  README.md  REQUIREMENTS_MIGRATION.md  RISER_PHASE1_SUMMARY.md  ROADMAP.md  TEST_BASELINE_SUMMARY.md  _count_tests.py  _coverage_map.py  _py_project.toml  analyze_sample_data_step_by_step.py  batch_network_fsts.yml  claude-flow  claude.md  coverage.wrk149.focused.xml  create-module-agent.py  create-spec.sh  dat_files_list.txt  debug.txt  (+41 more)
.agent-os/: README.md  migration-summary.md
.agent-runtime/: commands  coordination  resources
.ai/: AI_GUIDELINES.md  README.md  framework-v2.md  framework.md  settings.json
.claude/: .readiness-cache  AGENTS_REGISTRY_README.md  CLAUDE.md  CONDITIONAL_HOOKS_BEFORE_AFTER.md  CONDITIONAL_HOOKS_CONFIGURATION_SCHEMA.md  CONDITIONAL_HOOKS_DOCUMENTATION.md  CONDITIONAL_HOOKS_IMPLEMENTATION_SUMMARY.md  CONDITIONAL_HOOKS_QUICK_REFERENCE.md  CONDITIONAL_HOOKS_START_HERE.md  IMPLEMENTATION_COMPLETE.txt  README_CONDITIONAL_HOOKS.md  agents-registry.json  capability-manifest.yaml  hook-test-verification.md  memory-retention-policies.yaml  propagation-rules.yaml  quality-gates.yaml  readiness-report.md  settings.json  settings.local.json  skill-learning-log.md  statusline-command.sh
.claude-flow/: circuit-state-coder.json  circuit-state-tester.json  claude-flow-data.json  hive-config.json
.drcode/: config.json  droids.yml
.githooks/: pre-commit
.github/: dependabot.yml
.planning/: tug-toolkit-1193.md
_ai/: prompts.md
_coding_agents/: alt-rules.md  prompts.md  rules.md
agents/: README.md  cad-engineering-specialist.md
benchmark_output/: model_library_report.html  orcaflex_sme_review.html  riser_library_benchmark.json
config/: agent-selection-weights.yaml  checkpoint-policies.yaml  coverage.lcov  cross-repo-test-config.yaml  data_sources.yaml  dm_fsts_lngc.yml  dm_fsts_lngc_example.yml  load-balancing-config.yaml  validation_limits.yml  workflow-templates-enhanced.yaml
data/: METADATA.json  README.md  aisc_shapes.yaml  catalog.yml  orcaflex_provenance.json  provenance.yaml  provenance_detailed.json  provenance_summary.json  ship_dimensions_template.yaml  temp_input.csv  temp_normalized.csv  temp_normalized.csv.provenance.json  temp_source.csv  temp_source1.csv  temp_source2.csv  test_hash.txt  tracker_state.json
dev_tools/: add_orcaflex_registry.ps1  create_environment_developer.sh  devtool.md  environment.yml  git_all_repos.bat  git_all_repos.ps1  requirements-development.txt  requirements.txt  requirements_test.txt
docs/: AGENT_REGISTRY_IMPLEMENTATION_SUMMARY.md  BRANCH_MANAGEMENT_POLICY.md  CATENARY_CONSOLIDATION_COMPLETE.md  CATENARY_CONSOLIDATION_EXECUTIVE_SUMMARY.md  CLEANUP_SUMMARY.md  CROSS_REPO_PROPAGATION.md  DATA_ARCHITECTURE_IMPROVEMENTS_COMPLETE.md  DATA_PROCUREMENT_COMPLETION_SUMMARY.md  DATA_PROCUREMENT_STRATEGY.md  DATA_REORGANIZATION_PLAN.md  DEPLOYMENT-PROMPT-WEB-CONTEXTUALIZATION.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_PHASE2_SUMMARY.md  MARINE_QUICK_REFERENCE.md  MIGRATION_GUIDE.md  MODULE_IMPLEMENTATION_PHASE4.md  MODULE_PORTFOLIO_2026.md  MODULE_RECOMMENDATIONS_PHASE2.md  MODULE_SURVEY.md  NAMING_CONVENTION_UPDATE_SUMMARY.md  ORCAFLEX_AUTO_OPTIMIZATION_GUIDE.md  ORCAFLEX_MODULE_COMPLETION.md  ORCAFLEX_THREAD_OPTIMIZATION_FINDINGS.md  PHASE2_INITIAL_FINDINGS.md  PHASE3_OCIMF_FINDINGS.md  PHASE4_FATIGUE_FINDINGS.md  PROJECT_YAML_SYSTEM_SUMMARY.md  RAO_PARSER_FIX_SUMMARY.md  README.md  RELOCATED-DATA.md  REORGANIZATION_SUMMARY.md  SKILL_VERSIONING.md  SKILL_VERSIONING_IMPLEMENTATION.md  TEST_PERFORMANCE_REPORT.md  UNITS.md  VALIDATION_FRAMEWORK_BEST_PRACTICES.md  VIV_ANALYSIS_IMPLEMENTATION.md  WEB_SCRAPING_FINDINGS.md  WORKFLOW_CHECKPOINTS.md  (+35 more)
examples/: ORGANIZATION_SUMMARY.md  QUICKSTART.md  QUICK_START_FPSO.md  README.md  README_fpso_analysis.md  WORKFLOW_SUMMARY.md  agent_selection_demo.py  complete_orcaflex_workflow.py  config_registry_example.py  fatigue_analysis_examples.py  hydrodynamics_cache_integration.py  lazy_wave_example.py  metocean_streaming_example.py  orcaflex_signal_analysis_example.py  provenance_integration_examples.py  requirements.txt  reservoir_analysis_examples.py  riser_example.py  signal_analysis_usage_example.py  (+3 more)
specs/modules/visualization/orcaflex-dashboard/: .gitignore  Dockerfile.backend  Dockerfile.frontend  QUICKSTART.md  README-POC.md  README.md  architecture.md  deployment-guide.md  docker-compose.yml  pyproject.toml  start-dev.bat  tasks.md
specs/modules/visualization/orcaflex-dashboard/config/: .env.example
specs/modules/visualization/orcaflex-dashboard/src/backend/: __init__.py
specs/modules/visualization/orcaflex-dashboard/src/backend/alembic/: env.py
specs/modules/visualization/orcaflex-dashboard/src/backend/api/routes/: export.py  websocket.py
specs/modules/visualization/orcaflex-dashboard/src/backend/models/: database.py
specs/modules/visualization/orcaflex-dashboard/src/backend/services/: analysis.py  cache.py  database.py  file_monitor.py
specs/modules/visualization/orcaflex-dashboard/src/data-processing/: data_models.py
specs/modules/visualization/orcaflex-dashboard/src/frontend/: package.json
specs/modules/visualization/orcaflex-dashboard/src/frontend/src/components/Dashboard/: Dashboard.tsx
specs/modules/visualization/orcaflex-dashboard/src/frontend/src/components/Filters/: FilterPanel.tsx
specs/modules/visualization/orcaflex-dashboard/src/frontend/src/components/Reports/: Reports.tsx
specs/modules/visualization/orcaflex-dashboard/src/frontend/src/components/Settings/: Settings.tsx
specs/modules/visualization/orcaflex-dashboard/src/frontend/src/services/: api.ts
(+20671 files in other folders)
