
[project]
name = "digitalmodel"
version = "0.0.8"
description = "engineering asset digital model(s) for life cycle analysis"
authors = [{ name = "Vamsee Achanta", email = "vamsee.achanta@aceengineer.com" }]
license = {text = "MIT"}
readme = "README.md"
keywords = ["finite element", "asset representation", "structural", "physical", "engineering", "animation", "lifecycle", "lifecycle analysis", "single source of truth", "digital model", "digital twin"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

requires-python = ">=3.8"
dependencies = [
    "assetutilities>=0.0.7",
    "beautifulsoup4>=4.13.4",
    "black>=24.8.0",
    "bumpver>=2025.1131",
    "dash>=3.1.1",
    "deepdiff>=8.4.2",
    "docx>=0.2.4",
    "imgkit>=1.2.3",
    "isort>=5.13.2",
    "kaleido>=1.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.7.5",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "plotly>=6.2.0",
    "poetry>=1.8.5",
    "pydantic>=2.10.6",
    "pypdf2>=3.0.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "rainflow>=3.2.0",
    "requests>=2.32.4",
    "ruamel-yaml>=0.18.14",
    "scipy>=1.10.1",
    "scrapy>=2.11.2",
    "sympy>=1.13.3",
    "tabula>=1.0.5",
    "tabulate>=0.9.0",
    "webcolors>=24.8.0",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    "xmltodict>=0.14.2",
]
# Dependencies are managed in scripts/requirements.txt. Keep this file in sync for all environments.
[project.urls]
Homepage = "https://github.com/vamseeachanta/digitalmodel"
Repository = "https://github.com/vamseeachanta/digitalmodel"
Documentation = "https://github.com/vamseeachanta/digitalmodel/blob/master/README.md"

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "bumpver>=2023.1129",
    "isort>=5.0.0",
    "pytest>=7.0.0"
]
deploy = [
    "twine>=1.0.0",
    "build>=1.0.0"
]

[project.scripts]
digital_model = "digitalmodel.__main__:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[setuptools]
include-package-data = true

[setuptools.dynamic]
dependencies = {file = ["scripts/requirements.txt"]}


[tool.bumpver]
current_version = "0.0.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/digitalmodel/__init__.py" = ["{version}"]
"src/digitalmodel/__main__.py" = ["- digitalmodel v{version}"]

[tool.isort]
profile = "black"
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
